fix some bug in runjar